# producer-consumer-problem

./: .gitignore  CMakeLists.txt  Makefile  Queue.cpp  Queue.h  README.md  consumer  consumer.cpp  custom_queue.cpp  custom_queue.h  main.cpp  msg.cpp  msg.h  producer  producer.cpp
examples/: consumer.cpp  producer.cpp
include/: Queue.h  msg.h
src/: CMakeLists.txt  Queue.cpp  main.cpp  msg.cpp
test-code/: reader  reader.cpp  writer  writer.cpp
test-code/yes/: consumer  consumer.cpp  producer  producer.cpp
